--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,9 @@
 		<!--<matsim.version>0.11.0-2019w01-SNAPSHOT</matsim.version>-->
 
 		<!-- snapshot> -->
-		<matsim.version>12.0-2019w48-SNAPSHOT</matsim.version>
+		<!--matsim.version>12.0-2019w48-SNAPSHOT</matsim.version>-->
+		<matsim.version>12.0</matsim.version>
+
 	</properties>
 
 	<repositories>
